...
                app:endIconMode="clear_text"
                app:endIconTint="?attr/colorOnSurfaceVariant"
                app:startIconDrawable="@drawable/ic_search"
                app:startIconTint="?attr/colorOnSurfaceVariant">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:textColor="?attr/colorOnSurface"
                    android:textColorHint="?attr/colorOnSurfaceVariant" />
...
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:indeterminate="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvIcons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="4dp"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
...
