...
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.ActivityListFragment">

    <!-- CC BY-SA 4.0 https://stackoverflow.com/a/46026362 -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvActivities"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:fastScrollEnabled="true"
        app:fastScrollHorizontalThumbDrawable="@drawable/fast_scroll_thumb"
        app:fastScrollHorizontalTrackDrawable="@drawable/fast_scroll_track"
        app:fastScrollVerticalThumbDrawable="@drawable/fast_scroll_thumb"
...
